prevents overlap of widget item and close icon

--- a/src/components/dialogs/DialogManager/index.module.scss
+++ b/src/components/dialogs/DialogManager/index.module.scss
@@ -11,6 +11,7 @@
   overflow: auto;
   border-radius: 0.75rem;
   padding: 1rem;
+  padding-top: 3rem;
   border-color: hsl(204 3% 26%);
   background-color: hsl(204 3% 18%);
   color: hsl(204 20% 100%);
@@ -26,6 +27,7 @@
     width: 420px;
     border-radius: 1rem;
     padding: 1.5rem;
+    padding-top: 3rem;
   }
 }
 
